tests/NormalTests/paczka1/small_fuzzy/92148379.err
Error in line 10: netAB7ACZ0 A334 21,9
Error in line 11: netAB7ACZ0 A510 76,1
Error in line 14: PC9 A334 43,9
